minor css adjustments. havent figured out smooth scrolling on the messenger yet due to overflow-x issues with the open button.

--- a/resources/sass/pages/_all-posts.scss
+++ b/resources/sass/pages/_all-posts.scss
@@ -42,7 +42,8 @@
         border: $border-thickness solid $border-color;
         font-family: $main-font;
         // z-index: 3;
-        border-radius: $border-r;
+        border-radius: 7px;
+        overflow: hidden;
         // background: $post-bg;
         background: $post-bg-gradient;
         margin-top: 3rem;
